Sun Oct  3 17:55:17 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* doc/* doc/internals.html doc/client_server.gif doc/server_structs.gif:
	  added documentation about the internals, regenerated the docs.

Sun Oct  3 16:11:01 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c: extra debug on client API

Sun Oct  3 16:03:56 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c server/gam_subscription.c: cleanup, debug
	  and probable fix for #132429, #133665 and #134413

Sat Oct  2 14:57:58 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_server.c: code cleanup
	* lib/gam_error.[ch] libgamin/gam_api.c: added a dynamic debugging
	  capability using SIGUSR2

Fri Oct  1 18:15:05 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in: release 0.0.13

Fri Oct  1 12:01:39 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/fam.h server/gam_poll.c: portability cleanups w.r.t.
	  PATH_MAX not in limits.h reported by Michael Banck

Fri Oct  1 11:47:55 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c libgamin/gam_protocol.h server/gam_connection.c:
	  applied patch from Sergio Garcia to fix a packet size problem
	  on some platforms.

Fri Oct  1 01:13:52 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_node.[hc] server/gam_poll.c server/gam_subscription.[ch]:
	  cleanup and be more defensive.

Thu Sep 30 15:34:19 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in: release 0.0.12

Tue Sep 28 01:31:52 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: adding missing locks around a list
	  update. Though gam_server is single threaded maybe this
	  is the cause of a list corruption generating a loop.

Mon Sep 27 12:47:20 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in server/Makefile.am: release 0.0.11

Mon Sep 27 11:53:01 CEST 2004 Daniel Veillard <veillard@redhat.com>
